# ros_ws

./: frames_2025-11-17_11.45.12.gv
install/: local_setup.sh  setup.sh
install/diff_drivebot/share/diff_drivebot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/to_rover/share/to_rover/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml  package.zsh
install/to_urdf/share/to_urdf/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/to_wheels_drive/share/to_wheels_drive/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  to_wheels_drive_plugin.xml
log/: latest_build
src/diff_drivebot/: CMakeLists.txt
src/diff_drivebot/config/: diff_control.yaml
src/diff_drivebot/launch/: display.launch  gazebo.launch  view_diff.launch.py
src/diff_drivebot/meshes/collision/: LFW.STL  LRW.STL  RFW.STL  RRW.STL  base_link_diff.STL
src/diff_drivebot/meshes/visual/: LFW.dae  LRW.dae  RFW.dae  RRW.dae  base_link_diff.dae
src/diff_drivebot/urdf/: Diff_Drive_1.4.csv  Diff_Drive_1.4.urdf  diff_drive.urdf.xacro  diff_drive_joint_limited_robot.urdf
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/to_rover/: CMakeLists.txt
src/to_rover/config/: to_control_manager.yaml
src/to_rover/launch/: display.launch  view_to.launch.py
src/to_rover/meshes/collision/: LRS.STL  RFS.STL  RFW.STL  RRW.STL
src/to_rover/meshes/visual/: LRS.dae  RFS.dae  RRW.dae  base_link.dae
src/to_rover/src/: Wheel_control.cpp
src/to_rover/urdf/: TO_URDF_1.1.urdf  TO_URDF_joint_limited_robot.urdf  to.gazebo.xacro  to_rover.urdf  to_rover.urdf.xacro
src/to_urdf/: CMakeLists.txt  package.xml
src/to_urdf/config/: joint_names_TO_URDF_1.1.yaml
src/to_urdf/launch/: display.launch  gazebo.launch
src/to_urdf/meshes/collision/: LFS.STL  LFW.STL  LRW.STL  RRS.STL  base_link.STL
src/to_urdf/meshes/visual/: LFS.dae  LFW.dae  LRW.dae  RFW.dae  (+1 more)
src/to_urdf/urdf/: TO_URDF_1.1.csv  to.transmission.xacro
src/to_wheels_drive/: CMakeLists.txt  to_wheels_drive_plugin.xml
src/to_wheels_drive/include/to_wheels_drive/: odometry.hpp  to_wheels_drive.hpp
src/to_wheels_drive/src/: odometry.cpp  to_wheels_drive.cpp
(+146 files in other folders)
